fix spacing for item delete page

--- a/public/stylesheets/item_detail.css
+++ b/public/stylesheets/item_detail.css
@@ -3,7 +3,7 @@
 .item-detail {
   margin-top: 64px;
   margin-bottom: 16px;
-  width: 100%;
+  width: 1120px;
   display: flex;
   column-gap: 32px;
 }
